--- a/admin.html
+++ b/admin.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Admin Panel</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>London Bridge RP - Admin Panel</title>
+<style>
+  body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: darkred;
+    color: white;
+    text-align: center;
+  }
+  header {
+    padding: 15px;
+    background: rgba(0,0,0,0.4);
+  }
+  header a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 8px 15px;
+    background: black;
+    border-radius: 5px;
+  }
+  h1 {
+    margin-top: 40px;
+  }
+  .discord-btn {
+    background: #5865F2;
+    color: white;
+    padding: 12px 24px;
+    margin-top: 20px;
+    display: inline-block;
+    border-radius: 6px;
+    font-size: 1.1em;
+    text-decoration: none;
+  }
+  .discord-btn:hover {
+    background: #4752C4;
+  }
+</style>
 </head>
-<body class="admin-page">
-    <h1>Admin Panel</h1>
-    <a href="https://discord.gg/VbXA5tU5jg" class="discord-btn" target="_blank">Go to Discord</a>
+<body>
+
+<header>
+  <a href="index.html">Back to Home</a>
+</header>
+
+<h1>Admin Panel</h1>
+<p>Click below to join the official Discord server:</p>
+<a href="https://discord.gg/VbXA5tU5jg" target="_blank" class="discord-btn">Go to Discord</a>
+
 </body>
 </html>
