--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background: url('https://i.ibb.co/6g5zX9z/red-lightning.jpg') no-repeat center center fixed;
+    background: url('background.jpg') no-repeat center center fixed;
     background-size: cover;
     cursor: url('https://cur.cursors-4u.net/cursors/cur-11/cur1033.cur'), auto;
     color: white;
