--- a/index.html
+++ b/index.html
@@ -80,14 +80,9 @@
 </div>
 
 <div class="buttons">
-  <button onclick="showUnderConstruction()">Store</button>
-  <button onclick="showUnderConstruction()">Partners</button>
+  <button onclick="window.location.href='under-construction.html'">Store</button>
+  <button onclick="window.location.href='under-construction.html'">Partners</button>
   <button onclick="window.open('https://discord.gg/VbXA5tU5jg', '_blank')">Discord</button>
-</div>
-
-<div id="chat-box">
-  <h2>Live Server Chat</h2>
-  <div id="messages">Bot connection coming soon...</div>
 </div>
 
 <script>
