--- a/admin.html
+++ b/admin.html
@@ -43,8 +43,37 @@
   #admin-content {
     display: none;
   }
+  #rules-section {
+    margin: 60px auto 0 auto;
+    max-width: 500px;
+    background: rgba(0,0,0,0.7);
+    padding: 30px 20px;
+    border-radius: 10px;
+  }
+  #rules-section h2 {
+    margin-top: 0;
+  }
+  #agree-checkbox {
+    margin-top: 20px;
+    transform: scale(1.2);
+  }
+  #continue-btn {
+    margin-top: 20px;
+    padding: 8px 16px;
+    font-size: 1em;
+    border-radius: 4px;
+    border: none;
+    background: #222;
+    color: white;
+    cursor: pointer;
+  }
+  #continue-btn:disabled {
+    background: #555;
+    cursor: not-allowed;
+  }
   #password-form {
     margin-top: 100px;
+    display: none;
   }
   #password-input {
     padding: 8px;
@@ -66,9 +95,49 @@
     color: #ffb3b3;
     margin-top: 10px;
   }
+  .owners {
+    margin-top: 30px;
+    background: rgba(0,0,0,0.5);
+    padding: 15px;
+    border-radius: 8px;
+    display: inline-block;
+  }
+  .owners h3 {
+    margin-top: 0;
+  }
+  .owner-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 1.1em;
+  }
 </style>
 </head>
 <body>
+
+<div id="rules-section">
+  <h2>Staff Rules</h2>
+  <ul style="text-align:left; max-width:400px; margin:0 auto 20px auto;">
+    <li>1. Treat all members with respect and fairness.</li>
+    <li>2. No abuse of admin powers.</li>
+    <li>3. Keep all information confidential.</li>
+    <li>4. Follow Discord and server guidelines at all times.</li>
+    <li>5. Report any issues to the owners immediately.</li>
+  </ul>
+  <label>
+    <input type="checkbox" id="agree-checkbox">
+    I have read and agree to the staff rules.
+  </label>
+  <br>
+  <button id="continue-btn" disabled>Continue</button>
+  <div class="owners">
+    <h3>Owners</h3>
+    <ul class="owner-list">
+      <li>Kai (<span style="font-family:monospace;">1316443267189047306</span>)</li>
+      <li>Ethan (<span style="font-family:monospace;">1231585229236605050</span>)</li>
+    </ul>
+  </div>
+</div>
 
 <div id="password-form">
   <h2>Enter Admin Password</h2>
@@ -88,8 +157,24 @@
 </div>
 
 <script>
+  // Staff rules agreement logic
+  const agreeCheckbox = document.getElementById('agree-checkbox');
+  const continueBtn = document.getElementById('continue-btn');
+  const rulesSection = document.getElementById('rules-section');
+  const passwordForm = document.getElementById('password-form');
+
+  agreeCheckbox.addEventListener('change', function() {
+    continueBtn.disabled = !agreeCheckbox.checked;
+  });
+
+  continueBtn.onclick = function() {
+    rulesSection.style.display = 'none';
+    passwordForm.style.display = 'block';
+    document.getElementById('password-input').focus();
+  };
+
+  // Password logic
   const correctPassword = "Admin";
-  const form = document.getElementById('password-form');
   const adminContent = document.getElementById('admin-content');
   const input = document.getElementById('password-input');
   const error = document.getElementById('password-error');
@@ -97,7 +182,7 @@
 
   submit.onclick = function() {
     if (input.value === correctPassword) {
-      form.style.display = 'none';
+      passwordForm.style.display = 'none';
       adminContent.style.display = 'block';
     } else {
       error.textContent = "Incorrect password. Try again.";
