--- a/index.html
+++ b/index.html
@@ -3,93 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>London Bridge RP</title>
-<style>
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: url('background.jpg') no-repeat center center fixed;
-    background-size: cover;
-    cursor: url('https://cur.cursors-4u.net/cursors/cur-11/cur1033.cur'), auto;
-    color: white;
-    text-align: center;
-  }
-  header {
-    display: flex;
-    justify-content: flex-end;
-    padding: 10px 20px;
-    background: rgba(0,0,0,0.4);
-  }
-  header a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 8px 15px;
-    background: black;
-    border-radius: 5px;
-  }
-  img.logo {
-    max-width: 300px;
-    margin-top: 20px;
-  }
-  .description {
-    margin: 20px auto;
-    max-width: 600px;
-    background: rgba(0,0,0,0.6);
-    padding: 15px;
-    border-radius: 8px;
-    font-size: 1.1em;
-  }
-  .buttons {
-    margin-top: 30px;
-  }
-  button {
-    background: red;
-    border: none;
-    color: white;
-    padding: 12px 24px;
-    margin: 10px;
-    border-radius: 6px;
-    font-size: 1.1em;
-    cursor: pointer;
-  }
-  button:hover {
-    background: darkred;
-  }
-  #chat-box {
-    margin-top: 40px;
-    background: rgba(0,0,0,0.6);
-    padding: 15px;
-    border-radius: 10px;
-    max-width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-</style>
+<title>MyAntiCheat</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <header>
+    <h1>MyAntiCheat</h1>
+    <button id="generateKey">Generate Key</button>
+    <button id="viewKeys">View My Keys</button>
+  </header>
 
-<header>
-  <a href="admin.html">Admin</a>
-</header>
+  <div id="output"></div>
 
-<img src="London_Bridge_Roleplay.png" alt="London Bridge RP Logo" class="logo">
-
-<div class="description">
-  <p>Welcome to <strong>London Bridge Roleplay</strong> — the ultimate UK-themed roleplay experience! Immerse yourself in realistic scenarios, stunning environments, and an active, welcoming community.</p>
-</div>
-
-<div class="buttons">
-  <button onclick="window.location.href='under-construction.html'">Store</button>
-  <button onclick="window.location.href='under-construction.html'">Partners</button>
-  <button onclick="window.open('https://discord.gg/VbXA5tU5jg', '_blank')">Discord</button>
-</div>
-
-<script>
-function showUnderConstruction() {
-  alert("UNDER CONSTRUCTION");
-}
-</script>
-
+  <script src="js/main.js"></script>
 </body>
 </html>
